--- a/style.css
+++ b/style.css
@@ -94,4 +94,32 @@ font-family: 'Roboto Mono', monospace;
 }
 .donate h1{
     text-align: center;
+    margin: 20px 30px ;
     }
+    .updates{
+        text-align: center;
+        font-size: 20px;
+        font-weight: bold;
+        color: #000;
+
+    }
+    .updates input{
+        width: 200px;
+        height: 30px;
+        border-radius: 3px;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+        -ms-border-radius: 3px;
+        -o-border-radius: 3px;
+}
+ .footer{
+    text-align: center;
+    background-color: teal;
+    padding: 100px,10;
+ }   
+ .footer h1{
+    font-weight: bold;
+    color: #000;
+    text-transform: capitalize;
+    font-size: 18px;
+ }
