--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ margin: auto;
 
     }
     .updates input{
+        background-color: antiquewhite;
         width: 200px;
         height: 30px;
         border-radius: 3px;
